--- a/ECommerceAPP/Presentation/ECommerceAPP.API/ECommerceAPP.API.csproj
+++ b/ECommerceAPP/Presentation/ECommerceAPP.API/ECommerceAPP.API.csproj
@@ -8,6 +8,10 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.9">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
@@ -16,6 +20,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Core\ECommerce.Application\ECommerceAPP.Application.csproj" />
+    <ProjectReference Include="..\..\Infrastructure\ECommerceAPP.Persistence\ECommerceAPP.Persistence.csproj" />
   </ItemGroup>
 
 </Project>
