--- a/ECommerceClient/package.json
+++ b/ECommerceClient/package.json
@@ -30,6 +30,7 @@
     "@angular/material": "^20.2.4",
     "@angular/platform-browser": "^20.2.0",
     "@angular/router": "^20.2.0",
+    "alertifyjs": "^1.14.0",
     "bootstrap": "^5.3.8",
     "jquery": "^3.7.1",
     "rxjs": "~7.8.0",
