--- a/ECommerceClient/package.json
+++ b/ECommerceClient/package.json
@@ -22,6 +22,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^20.2.4",
     "@angular/cdk": "^20.2.4",
     "@angular/common": "^20.2.0",
     "@angular/compiler": "^20.2.0",
@@ -33,6 +34,7 @@
     "alertifyjs": "^1.14.0",
     "bootstrap": "^5.3.8",
     "jquery": "^3.7.1",
+    "ngx-toastr": "^19.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
